--- a/src/less/var.less
+++ b/src/less/var.less
@@ -8,6 +8,6 @@
 @text-color: black; // major text color
 @text-color-secondary: black; // secondary text color
 @disabled-color: black; // disable state color
-@border-radius-base: 20; // major border radius
+@border-radius-base: 1; // major border radius
 @border-color-base: black; // major border color
-@box-shadow-base: 0 2px 8px black; // major shadow for layers
+@box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // major shadow for layers
