--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ code {
 }
 .header {
   background-color: white !important;
+  width: 100%;
   display: flex !important;
 }
 
@@ -24,12 +25,15 @@ code {
 .sider {
   height: 100vh;
   background-color: white !important;
-  position: fixed !important;
-  left: 0;
+  position: sticky !important;
+  top: 0;
   z-index: 100;
+  margin-right: auto;
 }
 .footer {
   margin-top: auto;
+  display: flex;
+  justify-content: center;
 }
 
 .ant-layout-sider-trigger {
