--- a/src/less/var.less
+++ b/src/less/var.less
@@ -1,13 +1,13 @@
-@primary-color: black; // primary color for all components
-@link-color: black; // link color
-@success-color: black; // success state color
-@warning-color: black; // warning state color
-@error-color: black; // error state color
-@font-size-base: 15; // major text font size
-@heading-color: black; // heading text color
-@text-color: black; // major text color
-@text-color-secondary: black; // secondary text color
-@disabled-color: black; // disable state color
-@border-radius-base: 1; // major border radius
-@border-color-base: black; // major border color
-@box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // major shadow for layers
+@primary-color: #25b864; // primary color for all components
+// @link-color: #000; // link color
+// @success-color: #000; // success state color
+// @warning-color: #000; // warning state color
+// @error-color: #000; // error state color
+// @font-size-base: 15; // major text font size
+// @heading-color: #000; // heading text color
+// @text-color: #000; // major text color
+// @text-color-secondary: #000; // secondary text color
+// @disabled-color: #000; // disable state color
+// @border-radius-base: 1; // major border radius
+// @border-color-base: #000; // major border color
+// @box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // major shadow for layers
